--- a/pages/cart.html
+++ b/pages/cart.html
@@ -6,32 +6,15 @@
   <title>Кошик - Шкільна їдальня</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet" />
   <style>
-    /* Глобальні стилі */
     body {
       font-family: "Orbitron", sans-serif;
+      background: linear-gradient(120deg, #ff9a9e 0%, #66a6ff 100%);
+      color: white;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #ff7a18, #af002d, #2a2a72);
-      background-size: 400% 400%;
-      animation: gradientAnimation 10s ease infinite;
-      color: white;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      justify-content: flex-start;
-      overflow-x: hidden;
-    }
-
-    @keyframes gradientAnimation {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
     }
 
     header {
@@ -59,92 +42,73 @@
       text-decoration: none;
       color: white;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 18px;
       padding: 10px 20px;
       border-radius: 5px;
-      background-color: rgba(0, 0, 0, 0.3);
-      transition: color 0.3s ease, transform 0.3s ease;
+      transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
     }
 
     header nav ul li a:hover {
-      color: #ff7a18;
-      background-color: rgba(0, 0, 0, 0.6);
+      color: #ff9a9e;
+      transform: scale(1.1);
+      text-shadow: 0 0 8px #ff9a9e;
     }
 
-    .cart-container {
+    .main-content {
       padding: 20px;
-      margin-top: 20px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      flex-grow: 1;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      border-radius: 10px;
-      background: rgba(0, 0, 0, 0.5);
-      overflow-y: auto;
-      max-height: 70vh;
+      text-align: center;
     }
 
-    .cart-container h1 {
-      text-align: center;
-      font-size: 30px;
-      margin-bottom: 20px;
-      color: #ff7a18;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    .cart-items {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin: 20px 0;
     }
 
     .cart-item {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
       padding: 10px;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 8px;
-    }
-
-    .cart-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-    }
-
-    .cart-item img {
-      width: 50px;
-      height: 50px;
-      border-radius: 5px;
-    }
-
-    .cart-item div {
-      flex-grow: 1;
-      padding-left: 15px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
     }
 
     .cart-item h3 {
-      font-size: 18px;
-      color: #fff;
+      margin: 0;
     }
 
     .cart-item p {
-      font-size: 14px;
-      color: #ffd700;
+      margin: 0;
+    }
+
+    .total {
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 20px;
     }
 
     .btn-container {
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
       margin-top: 20px;
     }
 
     .btn {
-      background-color: #ff7a18;
+      background-color: #ff9a9e;
       color: white;
       border: none;
       padding: 12px 20px;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 18px;
+      transition: background-color 0.3s ease;
+      font-size: 16px;
     }
 
     .btn:hover {
-      background-color: #ff6a18;
+      background-color: #ff6a6a;
     }
 
     footer {
@@ -158,24 +122,27 @@
   </style>
 </head>
 <body>
-
   <header>
     <nav>
       <ul>
         <li><a href="index.html">Початкова сторінка</a></li>
-        <li><a href="drinks.html">Напої</a></li>
-        <li><a href="tests/index.html">Тести</a></li>
-        <li><a href="cart.html">Кошик</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="cart-container">
+  <div class="main-content">
     <h1>Ваш кошик</h1>
-    <div id="cart-items"></div>
+
+    <div class="cart-items" id="cart-items">
+      <!-- Товари будуть додаватися тут -->
+    </div>
+
+    <div class="total" id="total-price">Загальна ціна: 0 грн</div>
+
     <div class="btn-container">
+      <button class="btn" onclick="window.location.href='menu.html'">Продовжити покупки</button>
       <button class="btn" onclick="clearCart()">Очистити кошик</button>
-      <button class="btn" onclick="placeOrder()">Оформити замовлення</button>
+      <button class="btn">Оформити замовлення</button>
     </div>
   </div>
 
@@ -184,55 +151,34 @@
   </footer>
 
   <script>
-    // Ініціалізація кошика
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+    const cartItemsContainer = document.getElementById('cart-items');
+    const totalPriceElement = document.getElementById('total-price');
 
-    // Функція для відображення товарів у кошику
     function displayCart() {
-      const cartItemsContainer = document.getElementById("cart-items");
-      cartItemsContainer.innerHTML = ""; // Очистити попередній контент
+      let totalPrice = 0;
+      cartItemsContainer.innerHTML = ''; // Очищаємо список перед кожним відображенням
+      cart.forEach(item => {
+        const cartItemElement = document.createElement('div');
+        cartItemElement.classList.add('cart-item');
+        cartItemElement.innerHTML = `
+          <h3>${item.name}</h3>
+          <p>${item.price} грн</p>
+        `;
+        cartItemsContainer.appendChild(cartItemElement);
+        totalPrice += item.price;
+      });
 
-      if (cart.length === 0) {
-        cartItemsContainer.innerHTML = "<p>Ваш кошик порожній.</p>";
-      } else {
-        cart.forEach(item => {
-          const cartItem = document.createElement("div");
-          cartItem.classList.add("cart-item");
-
-          cartItem.innerHTML = `
-            <img src="https://example.com/image1.jpg" alt="${item.item}">
-            <div>
-              <h3>${item.item}</h3>
-              <p>${item.price} грн</p>
-            </div>
-          `;
-          cartItemsContainer.appendChild(cartItem);
-        });
-      }
+      totalPriceElement.textContent = `Загальна ціна: ${totalPrice} грн`;
     }
 
-    // Функція для очищення кошика
     function clearCart() {
-      localStorage.removeItem("cart");
-      cart = [];
-      displayCart();
+      localStorage.removeItem('cart');
+      cart.length = 0; // Очищаємо масив кошика
+      displayCart(); // Оновлюємо відображення кошика
     }
 
-    // Функція для оформлення замовлення
-    function placeOrder() {
-      if (cart.length === 0) {
-        alert("Ваш кошик порожній. Будь ласка, додайте товари для оформлення замовлення.");
-      } else {
-        alert("Ваше замовлення успішно оформлено! Дякуємо за покупку.");
-        localStorage.removeItem("cart");
-        cart = [];
-        displayCart();
-      }
-    }
-
-    // Відображення кошика при завантаженні сторінки
     displayCart();
   </script>
-
 </body>
 </html>
