--- a/pages/index.html
+++ b/pages/index.html
@@ -259,14 +259,15 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/pages/index.html">Початкова сторінка</a></li>
+          <li><a href="/pages/index2.html">Початкова сторінка</a></li>
           <li><a href="/pages/menu.html">Меню</a></li>
-          <li><a href="/tests/tests/tests/tests.html">Тести</a></li>
-          <li><a href="/tests/tests/tests/wallet.html" class="cart-button">Гаманець</a></li>
+          <li><a href="/tests/tests/index.html">Тести</a></li>
+          <li><a href="/pages/wallet.html" class="cart-button">Гаманець</a></li>
           <li><a href="/pages/cart.html" class="cart-button">🛒</a></li>
         </ul>
       </nav>
     </header>
+    
 
     <section class="hero">
       <h1>Ласкаво просимо до шкільної їдальні!</h1>
