--- a/pages/index.html
+++ b/pages/index.html
@@ -261,8 +261,8 @@
         <ul>
           <li><a href="/pages/index2.html">Початкова сторінка</a></li>
           <li><a href="/pages/menu.html">Меню</a></li>
-          <li><a href="/tests/tests/index.html">Тести</a></li>
-          <li><a href="/pages/wallet.html" class="cart-button">Гаманець</a></li>
+          <li><a href="/tests/index.html">Тести</a></li>
+          <li><a href="/tests/wallet.html" class="cart-button">Гаманець</a></li>
           <li><a href="/pages/cart.html" class="cart-button">🛒</a></li>
         </ul>
       </nav>
