--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -307,11 +307,11 @@
     <header>
         <nav>
           <ul>
-            <li><a href="/pages/index.html">Початкова сторінка</a></li>
-            <li><a href="/pages/menu.html">Меню</a></li>
-            <li><a href="/tests/tests/tests/tests.html">Тести</a></li>
-            <li><a href="/tests/tests/tests/wallet.html" class="cart-button">Гаманець</a></li>
-            <li><a href="/pages/cart.html" class="cart-button">🛒</a></li>
+            <li><a href="../pages/index.html">Початкова сторінка</a></li>
+            <li><a href="../pages/menu.html">Меню</a></li>
+            <li><a href="../tests/tests.html">Тести</a></li>
+            <li><a href="../tests/tests.html" class="cart-button">Гаманець</a></li>
+            <li><a href="../pages/cart.html" class="cart-button">🛒</a></li>
           </ul>
         </nav>
       </header>
