--- a/pages/index.html
+++ b/pages/index.html
@@ -262,11 +262,12 @@
           <li><a href="../pages/index.html">Початкова сторінка</a></li>
           <li><a href="../pages/menu.html">Меню</a></li>
           <li><a href="../tests/tests.html">Тести</a></li>
-          <li><a href="../tests/tests.html" class="cart-button">Гаманець</a></li>
+          <li><a href="../tests/wallet.html" class="cart-button">Гаманець</a></li>
           <li><a href="../pages/cart.html" class="cart-button">🛒</a></li>
         </ul>
       </nav>
     </header>
+  
 
     <section class="hero">
       <h1>Ласкаво просимо до шкільної їдальні!</h1>
