--- a/pages/menu.html
+++ b/pages/menu.html
@@ -153,7 +153,7 @@
         <li><a href="../pages/index.html">Початкова сторінка</a></li>
         <li><a href="../pages/menu.html">Меню</a></li>
         <li><a href="../tests/tests.html">Тести</a></li>
-        <li><a href="../tests/tests.html" class="cart-button">Гаманець</a></li>
+        <li><a href="../tests/wallet.html" class="cart-button">Гаманець</a></li>
         <li><a href="../pages/cart.html" class="cart-button">🛒</a></li>
       </ul>
     </nav>
