--- a/pages/food.html
+++ b/pages/food.html
@@ -136,13 +136,13 @@
     <h1>Меню</h1>
     <!-- Товари -->
     <div class="menu-item">
-      <img src="https://via.placeholder.com/150" alt="Сендвіч 1">
+      <img src="https://milkalliance.com.ua/blog/images/articles/send3.jpg" alt="Сендвіч 1">
       <h3>Сендвіч 1</h3>
       <p>20 грн</p>
       <button class="btn" onclick="addToCart('Сендвіч 1', 20)">Додати до кошика</button>
     </div>
     <div class="menu-item">
-      <img src="https://via.placeholder.com/150" alt="Сендвіч 2">
+      <img src="https://milkalliance.com.ua/blog/images/articles/send2.jpg" alt="Сендвіч 2">
       <h3>Сендвіч 2</h3>
       <p>25 грн</p>
       <button class="btn" onclick="addToCart('Сендвіч 2', 25)">Додати до кошика</button>
