--- a/pages/cart.html
+++ b/pages/cart.html
@@ -110,15 +110,25 @@
     .btn:hover {
       background-color: #ff6a6a;
     }
+    header {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+      }
+      footer {
+    background-color: #000; /* Непрозорий чорний колір */
+    padding: 20px;
+    text-align: center;
+    position: fixed; /* Фіксоване положення */
+    width: 100%;
+    bottom: 0; /* Прив’язка до низу */
+    left: 0; /* Вирівнювання по горизонталі */
+}
 
-    footer {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
   </style>
 </head>
 <body>
@@ -152,9 +162,13 @@
   </div>
 
   <footer>
-    <p>© 2024 Шкільна їдальня</p>
+    <p>&copy; 2024 Шкільна їдальня</p>
+    <div class="footer-links">
+      <a href="./contacts.html">Контакти</a>
+      <a href="./privacy-policy.html">Політика конфіденційності</a>
+      <a href="./about.html">Про нас</a>
+    </div>
   </footer>
-
   <script>
     const cart = JSON.parse(localStorage.getItem('cart')) || [];
     const cartItemsContainer = document.getElementById('cart-items');
