--- a/tests/wallet.html
+++ b/tests/wallet.html
@@ -94,6 +94,23 @@
         transform: scale(1.1);
         background: linear-gradient(135deg, #ff9d76, #7873f5);
       }
+      header {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+      }
+      footer {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        width: 100%;
+        bottom: 0;
+      }
     </style>
   </head>
   <body>
