--- a/pages/food.html
+++ b/pages/food.html
@@ -6,116 +6,130 @@
   <title>Шкільна їдальня</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet" />
   <style>
-    body {
-      font-family: "Orbitron", sans-serif;
-      background: linear-gradient(120deg, #ff9a9e 0%, #66a6ff 100%);
-      color: white;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
+body {
+  font-family: "Orbitron", sans-serif;
+  background: linear-gradient(120deg, #ff9a9e 0%, #66a6ff 100%);
+  color: white;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Задаємо мінімальну висоту для тіла */
+}
+header {
+  background-color: #000; /* Непрозорий чорний колір */
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
 
-    header {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
 
-    header nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+header nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-    header nav ul li {
-      margin: 0 20px;
-    }
+header nav ul li {
+  margin: 0 20px;
+}
 
-    header nav ul li a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 10px 20px;
-      border-radius: 5px;
-      transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
-    }
+header nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
+}
 
-    header nav ul li a:hover {
-      color: #ff9a9e;
-      transform: scale(1.1);
-      text-shadow: 0 0 8px #ff9a9e;
-    }
+header nav ul li a:hover {
+  color: #ff9a9e;
+  transform: scale(1.1);
+  text-shadow: 0 0 8px #ff9a9e;
+}
 
-    .main-content {
-      padding: 20px;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      justify-items: center;
-    }
+.main-content {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  justify-items: center;
+  flex-grow: 1; /* Дозволяє основному контенту займати весь доступний простір */
+  margin-bottom: 60px; /* Резервує місце для футера */
+}
 
-    .menu-item {
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 10px;
-      padding: 20px;
-      width: 200px;
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
+.menu-item {
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  padding: 20px;
+  width: 180px; /* Зменшили ширину, щоб блоки не були занадто великими */
+  text-align: center;
+  transition: transform 0.3s ease;
+}
 
-    .menu-item img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 5px;
-      margin-bottom: 10px;
-    }
+.menu-item img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
 
-    .menu-item h3 {
-      margin: 0 0 10px;
-      font-size: 18px;
-    }
+.menu-item h3 {
+  margin: 0 0 10px;
+  font-size: 18px;
+}
 
-    .menu-item p {
-      margin: 0 0 15px;
-      font-size: 16px;
-    }
+.menu-item p {
+  margin: 0 0 15px;
+  font-size: 16px;
+}
 
-    .menu-item .btn {
-      background-color: #ff9a9e;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      font-size: 16px;
-    }
+.menu-item .btn {
+  background-color: #ff9a9e;
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+  width: 100%;
+}
 
-    .menu-item .btn:hover {
-      background-color: #ff6a6a;
-    }
+.menu-item .btn:hover {
+  background-color: #ff6a6a;
+}
 
-    .menu-item:hover {
-      transform: scale(1.05);
-    }
+.menu-item:hover {
+  transform: scale(1.05);
+}
+header {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+      }
+      footer {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        width: 100%;
+        bottom: 0;
+      }
 
-    footer {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
+
+
   </style>
 </head>
 <body>
@@ -208,7 +222,7 @@
       <button class="btn" onclick="addToCart('Бургер', 50)">Додати до кошика</button>
     </div>
     <div class="menu-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSt8UB-5DA-o0toKivxgUI7JwXZCIx1sWVhqg&s" alt="Курячий нагетс">
+      <img src="https://agropererobka.com.ua/content/recipes/show/kuriachi_nahetsy_z_sousom_zhuravlyna_1702564684.jpg" alt="Курячий нагетс">
       <h3>Курячий нагетс</h3>
       <p>20 грн</p>
       <button class="btn" onclick="addToCart('Курячий нагетс', 20)">Додати до кошика</button>
@@ -220,9 +234,13 @@
       <button class="btn" onclick="addToCart('Омлет', 18)">Додати до кошика</button>
     </div>
   </div>
-
   <footer>
-    <p>© 2024 Шкільна їдальня</p>
+    <p>&copy; 2024 Шкільна їдальня</p>
+    <div class="footer-links">
+      <a href="./contacts.html">Контакти</a>
+      <a href="./privacy-policy.html">Політика конфіденційності</a>
+      <a href="./about.html">Про нас</a>
+    </div>
   </footer>
 
   <script>
