--- a/pages/index.html
+++ b/pages/index.html
@@ -10,248 +10,262 @@
       rel="stylesheet"
     />
     <style>
-      body {
-        font-family: "Orbitron", sans-serif;
-        background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
-        color: white;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        box-sizing: border-box;
-      }
+body {
+    font-family: "Orbitron", sans-serif;
+    background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
+    color: white;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
 
-      header {
-        background-color: rgba(0, 0, 0, 0.7);
-        padding: 20px;
-        position: sticky;
-        top: 0;
-        z-index: 100;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      }
+header {
+  background-color: #000; /* Непрозорий чорний колір */
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);    footer {
+  background-color: #000; /* Непрозорий чорний колір */
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+}
+ 
+}
+footer {
+  background-color: #000; /* Непрозорий чорний колір */
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+}
 
-      nav ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
 
-      nav ul li {
-        margin: 0 15px;
-      }
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-      nav ul li a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        transition: color 0.3s ease, transform 0.3s ease;
-        font-size: 18px;
-      }
+nav ul li {
+    margin: 0 15px;
+}
 
-      nav ul li a:hover {
-        color: #ff9a9e;
-        transform: scale(1.1);
-        text-shadow: 0 0 8px #ff9a9e;
-      }
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease, transform 0.3s ease;
+    font-size: 18px;
+}
 
-      .hero {
-        background: url("https://optim.tildacdn.com/tild3564-6436-4134-a234-343636356162/-/resize/824x/-/format/webp/interier-restorana.jpg")
-          no-repeat center center;
-        background-size: cover;
-        height: 70vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 0 20px;
-        position: relative;
-        background-attachment: fixed; /* Фіксує фон при прокручуванні */
-      }
+nav ul li a:hover {
+    color: #ff9a9e;
+    transform: scale(1.1);
+    text-shadow: 0 0 8px #ff9a9e;
+}
 
-      .hero h1,
-      .hero p {
-        position: relative;
-        z-index: 10;
-      }
+.hero {
+    background: url("https://optim.tildacdn.com/tild3564-6436-4134-a234-343636356162/-/resize/824x/-/format/webp/interier-restorana.jpg")
+        no-repeat center center;
+    background-size: cover;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 20px;
+    position: relative;
+    background-attachment: fixed;
+}
 
-      .hero::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: rgba(0, 0, 0, 0.5); /* Темний напівпрозорий фон */
-        z-index: 5;
-      }
+.hero h1, .hero p {
+    position: relative;
+    z-index: 10;
+}
 
-      .hero h1 {
-        font-size: 3rem;
-        margin-bottom: 20px;
-        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
-      }
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+}
 
-      .hero p {
-        font-size: 1.2rem;
-        margin-bottom: 30px;
-      }
+.hero h1 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+}
 
-      .cta-button {
-        background: linear-gradient(135deg, #f1c40f, #e67e22);
-        color: #000;
-        padding: 15px 30px;
-        font-size: 1.2rem;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background 0.3s ease;
-      }
+.hero p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+}
 
-      .cta-button:hover {
-        background: linear-gradient(135deg, #e67e22, #f1c40f);
-      }
+.cta-button {
+    background: linear-gradient(135deg, #f1c40f, #e67e22);
+    color: #000;
+    padding: 15px 30px;
+    font-size: 1.2rem;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
 
-      .auth-container {
-        margin-top: 20px;
-        text-align: center;
-      }
+.cta-button:hover {
+    background: linear-gradient(135deg, #e67e22, #f1c40f);
+}
 
-      .auth-container h2 {
-        font-size: 2rem;
-        margin-bottom: 10px;
-      }
+.auth-container {
+    margin-top: 20px;
+    text-align: center;
+}
 
-      .auth-container input {
-        padding: 10px;
+.auth-container h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.auth-container input {
+    padding: 10px;
+    font-size: 1rem;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.auth-container button {
+    background: #007bff;
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.auth-container button:hover {
+    background: #0056b3;
+}
+
+/* Кнопка кошика без фону */
+.cart-button {
+    background-color: transparent; /* Забираємо фон */
+    color: white;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    border: none; /* Видалено рамку */
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.cart-button:hover {
+    transform: scale(1.1);
+}
+
+/* Кнопка гаманця без фону */
+.wallet-button {
+    background-color: transparent; /* Забираємо фон */
+    color: white;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    border: none; /* Видалено рамку */
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.wallet-button:hover {
+    transform: scale(1.1);
+}
+
+.footer-links a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.footer-links a:hover {
+    color: #ff9a9e;
+}
+
+/* Адаптивні стилі для мобільних пристроїв */
+@media (max-width: 768px) {
+    .hero h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero p {
         font-size: 1rem;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
+    }
 
-      .auth-container button {
-        background: #007bff;
-        color: white;
+    .cta-button {
+        font-size: 1rem;
         padding: 12px 24px;
-        border: none;
-        border-radius: 4px;
-        font-size: 1rem;
-        cursor: pointer;
-      }
+    }
 
-      .auth-container button:hover {
-        background: #0056b3;
-      }
+    header {
+        padding: 10px 0;
+    }
 
-      /* Кнопка кошика в навігації */
-      .cart-button {
-        background-color: #ff9a9e;
-        color: white;
-        padding: 10px 20px;
-        font-size: 1.2rem;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        transition: transform 0.3s ease, background-color 0.3s ease;
-        cursor: pointer;
-      }
-
-      .cart-button:hover {
-        background-color: #e67e22;
-        transform: scale(1.1);
-      }
-
-      .footer {
-        background: linear-gradient(
-          135deg,
-          rgba(0, 0, 0, 0.8),
-          rgba(0, 0, 0, 0.6)
-        );
-        color: white;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
+    nav ul {
+        flex-direction: column;
         align-items: center;
-        flex-wrap: wrap;
-        text-align: center;
-        width: 100%;
-      }
+    }
 
-      .footer-links a {
-        color: white;
-        text-decoration: none;
-        margin: 0 10px;
-        font-size: 14px;
-        text-transform: uppercase;
-      }
+    nav ul li {
+        margin: 5px 0;
+    }
 
-      .footer-links a:hover {
-        color: #ff9a9e;
-      }
+    .footer {
+        padding: 15px;
+    }
 
-      /* Адаптивні стилі для мобільних пристроїв */
-      @media (max-width: 768px) {
-        .hero h1 {
-          font-size: 2.5rem;
-        }
+    .footer-links a {
+        font-size: 12px;
+    }
+}
 
-        .hero p {
-          font-size: 1rem;
-        }
+/* Адаптивні стилі для великих екранів (таблети, ноутбуки) */
+@media (min-width: 1024px) {
+    .hero {
+        height: 80vh;
+    }
 
-        .cta-button {
-          font-size: 1rem;
-          padding: 12px 24px;
-        }
+    .hero h1 {
+        font-size: 4rem;
+    }
 
-        header {
-          padding: 10px 0;
-        }
+    .cta-button {
+        font-size: 1.5rem;
+        padding: 18px 36px;
+    }
 
-        nav ul {
-          flex-direction: column;
-          align-items: center;
-        }
+    .footer {
+        padding: 30px;
+    }
 
-        nav ul li {
-          margin: 5px 0;
-        }
+    .footer-links a {
+        font-size: 16px;
+    }
+}
 
-        .footer {
-          padding: 15px;
-        }
-
-        .footer-links a {
-          font-size: 12px;
-        }
-      }
-
-      /* Адаптивні стилі для великих екранів (таблети, ноутбуки) */
-      @media (min-width: 1024px) {
-        .hero {
-          height: 80vh;
-        }
-
-        .hero h1 {
-          font-size: 4rem;
-        }
-
-        .cta-button {
-          font-size: 1.5rem;
-          padding: 18px 36px;
-        }
-
-        .footer {
-          padding: 30px;
-        }
-
-        .footer-links a {
-          font-size: 16px;
-        }
-      }
     </style>
   </head>
 
