--- a/tests/tests.html
+++ b/tests/tests.html
@@ -64,7 +64,23 @@
     .question {
       margin-bottom: 30px;
     }
-    
+    header {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+      }
+      footer {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        width: 100%;
+        bottom: 0;
+      }
     .question p {
       font-size: 1.5rem;
       margin-bottom: 10px;
