--- a/tests/tests.html
+++ b/tests/tests.html
@@ -123,11 +123,34 @@
       font-size: 1.5rem;
       margin-top: 20px;
     }
-    
+    header {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+      }
+      footer {
+        background-color: #000; /* Непрозорий чорний колір */
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        width: 100%;
+        bottom: 0;
+      }
   </style>
 </head>
 <body>
-
+  <footer>
+    <p>&copy; 2024 Шкільна їдальня</p>
+    <div class="footer-links">
+      <a href="./contacts.html">Контакти</a>
+      <a href="./privacy-policy.html">Політика конфіденційності</a>
+      <a href="./about.html">Про нас</a>
+    </div>
+  </footer>
   <header>
     <nav>
       <ul>
