--- a/tests/wallet.html
+++ b/tests/wallet.html
@@ -125,7 +125,14 @@
         </ul>
       </nav>
     </header>
-  
+    <footer>
+      <p>&copy; 2024 Шкільна їдальня</p>
+      <div class="footer-links">
+        <a href="./contacts.html">Контакти</a>
+        <a href="./privacy-policy.html">Політика конфіденційності</a>
+        <a href="./about.html">Про нас</a>
+      </div>
+    </footer>
 
     
 
